  creating SOAP fault when a response was already set threw an exception.
* enabling support for direct writing to the TransportResponse
* MessageContext contains TransportRequest, for transport-based routing

Package org.springframework.ws.endpoint
* improved endpoint test suite
* AbstractStaxPayloadEndpoint now use StaxSource corrently (#SWS-38)
* made PayloadValidatingInterceptor more customizable (#SWS-43)
* add schemas property to PayloadValidatingInterceptor (#SWS-44)
* changed AbstractDom4JPayloadEndpoint to AbstractDom4jPayloadEndpoint (lower case j), to follow Spring naming
  conventions (e.g. Log4jConfigurer)
* refactoring most of PayloadValidatingInterceptor into AbstractValidatingInterceptor

Package org.springframework.ws.soap
* improved content-type handling (#SWS-32)
* moved SOAP 1.1 specfics to separate package and interfaces
* SoapAction has been removed from SoapMessage, SoapActionEndpointMapping uses TransportRequest header

Package org.springframework.ws.soap.axiom
* add support for SAAJ 1.3
* added "payloadCaching" property to read the contents of SOAP bodies produced by the AxiomSoapMessageContextFactory in
  a non-buffering, read-once fashion.
* increased performance by keeping object references instead of creating new instances for every call

Package org.springframework.ws.soap.endpoint
* added SoapEnvelopeLoggingInterceptor, which logs the entire SoapEnvelope

Package org.springframework.ws.soap.saaj
* add support for SAAJ 1.3
* increased performance by keeping object references instead of creating new instances for every call

Package org.springframework.ws.soap.saaj.support
* added SaajUtils.getVersion()

Package org.springframework.ws.soap.soap11
* moved SOAP 1.1 specifics to separate package and interfaces

Package org.springframework.ws.soap.soap12
* moved SOAP 1.2 specifics to separate package and interfaces

Package org.springframework.ws.transport
* added TransportContext, TransportRequest & TransportResponse
