@@ -1,0 +1,5 @@
+<html>
+<body>
+Provides miscellaneous endpoints <code>EndpointInterceptor</code> implementations.
+</body>
+</html>
